--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@yisheng90/react-loading": "^1.4.4",
     "aos": "^2.3.4",
     "axios": "^0.21.0",
     "axios-debug-log": "^0.8.2",
@@ -23,6 +24,7 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "styled-content-loader": "^1.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
