--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "styled-content-loader": "^1.1.3",
+    "vercel": "^21.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
